# qa-project-template

./: pyproject.toml
.github/workflows/: tests.yml
pages/: base_page.py  login_page.py
performance/: run.sh
tests/: conftest.py
tests/api/: test_users.py
tests/ui/: test_login.py
