[project]
name = "qa-project-template"
version = "0.1.0"
description = ""
authors = [
    {name = "przeman",email = "przeman18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "selenium (>=4.39.0,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.13,<0.15.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "api: api tests",
  "smoke: quick smoke tests",
  "regression: full regression suite"
]